--- a/src/components/Navbar/components/Mobile/MobileLinks.module.css
+++ b/src/components/Navbar/components/Mobile/MobileLinks.module.css
@@ -1,7 +1,7 @@
 .menu {
   height: 100vh;
   height: 100svh;
-  @apply -z-10 duration-300 fixed top-0 left-0 p-24 w-full flex items-center flex-col gap-7 invisible scale-y-95 opacity-0 origin-top-right bg-black;
+  @apply -z-10 duration-300 fixed top-0 left-0 p-24 w-full flex items-center flex-col gap-7 invisible scale-y-90 opacity-0 origin-top-right bg-black;
 }
 
 .menu.active {
@@ -14,4 +14,18 @@
 
 .link.active {
   @apply text-cyan-600;
+}
+
+.menu-btn {
+  width: 26px;
+  height: 26px;
+  @apply relative;
+}
+
+.menu-icon {
+  @apply w-full h-full absolute top-0 right-0 invisible duration-300 opacity-0 -translate-y-2;
+}
+
+.menu-icon.active {
+  @apply visible opacity-100 translate-y-0;
 }
