--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,6 @@
 .card {
-  transition: 300ms;
   @apply flex flex-col items-center justify-center gap-3;
-  @apply p-7 rounded-md border border-cyan-600;
+  @apply duration-300 p-7 rounded-md border border-cyan-600;
 }
 
 .card:hover {
