add areachart to analytics

--- a/src/app/analytics/components/Chips/Chip.module.css
+++ b/src/app/analytics/components/Chips/Chip.module.css
@@ -1,7 +1,7 @@
 .chip {
-  @apply md:cursor-pointer duration-300 flex flex-row justify-between items-center p-5 md:p-7 rounded-lg bg-dark;
+  @apply animate-scaleUp duration-300 flex flex-row justify-between items-center py-5 px-10 rounded-xl bg-dark;
 }
 
 .chip:hover {
-  @apply md:scale-105;
+  @apply md:scale-105 md:cursor-pointer;
 }
