--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,20 +1,8 @@
 .card {
-  @apply flex flex-col items-center justify-center animate-scaleUp;
-  @apply duration-300 p-3 md:p-7 rounded-md border border-cyan-600;
+  @apply duration-300 p-5 md:p-7 rounded-md border border-cyan-600;
+  @apply flex flex-row md:flex-col items-center justify-center gap-3 animate-scaleUp;
 }
 
 .card:hover {
   box-shadow: 0 0 15px #0891b2;
-}
-
-.icon {
-  @apply text-[3.5rem] md:text-[6rem];
-}
-
-.title {
-  @apply font-semibold md:text-lg mt-1.5 md:mt-3 mb-1.5;
-}
-
-.subtitle {
-  @apply text-xs text-gray-400;
 }
