--- a/src/contexts/PopupContext/Popup.module.css
+++ b/src/contexts/PopupContext/Popup.module.css
@@ -1,7 +1,7 @@
 /* windows */
 .popupwindow {
-  @apply translate-y-0;
-  @apply px-4 md:px-0 w-full max-w-md z-10 fixed flex flex-col items-center -top-20 left-1/2 -translate-x-1/2 duration-300;
+  @apply fixed -top-20 left-1/2 -translate-x-1/2 duration-300;
+  @apply px-4 md:px-0 w-full max-w-md z-10 translate-y-0 flex flex-col items-center;
 }
 
 .popupwindow.active {
@@ -10,9 +10,9 @@
 
 /* body */
 .popupbody {
-  @apply w-full max-w-md flex flex-row items-center gap-3 rounded-md px-4 py-3 bg-red-600 text-white;
+  @apply w-full max-w-md flex flex-row items-center gap-2 rounded-md px-4 py-3 bg-red-600 text-white;
 }
 
-.popupbody.active {
+.popupbody.success {
   @apply bg-green-600;
 }
