--- a/src/components/Navbar/components/Mobile/MobileLinks.module.css
+++ b/src/components/Navbar/components/Mobile/MobileLinks.module.css
@@ -1,7 +1,8 @@
 .menu {
   height: 100vh;
   height: 100svh;
-  @apply -z-10 duration-300 fixed top-0 left-0 p-24 w-full flex items-center flex-col gap-7 invisible scale-y-90 opacity-0 origin-top-right bg-black;
+  @apply -z-10 duration-300 fixed top-0 left-0 pt-24 bg-black;
+  @apply w-full flex flex-col items-center justify-between invisible scale-y-90 opacity-0 origin-top-right;
 }
 
 .menu.active {
