--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -32,16 +32,16 @@
 }
 
 /* submit button */
-.button {
+.btn {
   transition: 300ms;
   @apply mt-2 w-full flex items-center justify-center h-12 rounded-md border border-cyan-600 font-semibold;
 }
 
-.button:disabled,
-.form:invalid .button {
+.btn:disabled,
+.form:invalid .btn {
   @apply cursor-not-allowed;
 }
 
-.form:valid .button:enabled:hover {
+.form:valid .btn:enabled:hover {
   box-shadow: 0 0 15px #0891b2;
 }
