--- a/src/app/view/components/Filter/Filter.module.css
+++ b/src/app/view/components/Filter/Filter.module.css
@@ -1,3 +1,3 @@
 .select {
-  @apply h-full bg-dark outline-none p-1 border border-gray-500 rounded-none;
+  @apply bg-dark outline-none px-2 h-9 rounded-md;
 }
