--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -10,8 +10,8 @@
 /* form */
 .form {
   box-shadow: 0 0 15px #0891b280;
-  @apply border border-cyan-600 rounded-lg animate-slideFromBottom;
-  @apply w-full max-w-sm p-4 flex flex-col items-center justify-center gap-5;
+  @apply border border-cyan-600 rounded-xl animate-slideFromBottom;
+  @apply w-full max-w-sm px-4 py-6 md:px-6 md:py-8 flex flex-col items-center justify-center gap-2;
 }
 
 /* input */
