--- a/src/app/view/components/Searchbar/Searchbar.module.css
+++ b/src/app/view/components/Searchbar/Searchbar.module.css
@@ -1,3 +1,3 @@
 .wrapper {
-  @apply bg-dark w-full flex flex-row items-center gap-1 justify-end rounded-md py-1.5 px-3 animate-slideFromTop;
+  @apply bg-gray-100 w-full flex flex-row items-center gap-1 justify-end rounded-md py-1.5 px-3 animate-slideFromTop;
 }
