--- a/src/app/view/components/Table/Table.module.css
+++ b/src/app/view/components/Table/Table.module.css
@@ -11,7 +11,11 @@
 }
 
 .table tbody tr:nth-of-type(odd) {
-  @apply bg-light;
+  @apply bg-gray-50;
+}
+
+.table tbody tr:hover {
+  @apply md:bg-gray-200;
 }
 
 .table thead th,
