--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,5 +7,5 @@ body {
   min-height: 100svh;
   font-family: sans-serif;
 
-  @apply flex flex-col items-center justify-center;
+  @apply flex flex-col items-center justify-center gradient-100;
 }
