--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .card {
-  @apply duration-300 p-10 rounded-xl bg-gray-100;
+  @apply duration-300 p-7 rounded-xl shadow-sm border border-gray-300 gradient-50;
   @apply flex flex-row md:flex-col items-center justify-center gap-3 animate-scaleUp;
 }
 
