--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -5,7 +5,7 @@
 
 /* form */
 .form {
-  @apply gradient-50 shadow-sm border border-gray-300 rounded-xl animate-slideFromBottom;
+  @apply gradient-50 shadow-md rounded-xl animate-slideFromBottom;
   @apply w-full max-w-sm px-4 py-6 md:px-6 md:py-8 flex flex-col items-center justify-center gap-5;
 }
 
