--- a/src/app/view/components/Filter/Filter.module.css
+++ b/src/app/view/components/Filter/Filter.module.css
@@ -1,3 +1,3 @@
 .select {
-  @apply gradient-50 outline-none px-2 h-9 rounded-md;
+  @apply gradient-50 shadow-md outline-none px-2 h-9 rounded-md;
 }
