--- a/src/app/view/components/Searchbar/Searchbar.module.css
+++ b/src/app/view/components/Searchbar/Searchbar.module.css
@@ -1,3 +1,3 @@
 .wrapper {
-  @apply gradient-50 w-full flex flex-row items-center gap-1 justify-end rounded-md py-1.5 px-3 animate-slideFromTop;
+  @apply gradient-50 shadow-md w-full flex flex-row items-center justify-end gap-1 rounded-md py-2.5 px-4 animate-slideFromTop;
 }
