--- a/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
+++ b/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
@@ -8,9 +8,9 @@
 }
 
 .link {
-  @apply flex flex-row items-center gap-2 py-2 px-4 rounded-full text-sm;
+  @apply flex flex-row items-center gap-2 py-2 px-4 rounded-full text-sm relative;
 }
 
-.link.active {
-  @apply bg-black text-white;
+.active-link {
+  @apply absolute inset-0 -z-10 bg-black/10 rounded-full;
 }
