--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -15,15 +15,19 @@
 
 /* input */
 .input-element {
-  @apply w-full flex flex-col gap-1;
+  @apply w-full flex flex-col gap-1 relative;
 }
 
 .label {
-  @apply flex flex-row items-center gap-1;
+  @apply w-fit flex flex-row items-center gap-1;
 }
 
 .input {
-  @apply font-mono resize-none w-full h-full outline-none bg-white border border-gray-400 p-2 rounded-md;
+  @apply w-full resize-none h-full outline-none bg-white border border-gray-400 p-2 rounded-md;
+}
+
+.input:focus {
+  @apply outline outline-blue-600;
 }
 
 /* submit button */
