--- a/src/app/view/components/Searchbar/Searchbar.module.css
+++ b/src/app/view/components/Searchbar/Searchbar.module.css
@@ -1,3 +1,7 @@
 .wrapper {
-  @apply gradient-50 shadow-md w-full flex flex-row items-center justify-end gap-1 rounded-md py-2.5 px-3 animate-slideFromTop;
+  @apply outline-none gradient-50 shadow-md w-full flex flex-row items-center justify-end gap-1 rounded-md py-2.5 px-3 animate-slideFromTop;
+}
+
+.wrapper:focus-within {
+  @apply outline outline-blue-600;
 }
