--- a/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
+++ b/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
@@ -3,14 +3,10 @@
   @apply flex flex-row items-center justify-evenly;
 }
 
-.links.scrollable {
-  box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, 0.2);
-}
-
 .link {
   @apply flex flex-row items-center gap-1 py-2 px-4 rounded-full text-sm relative;
 }
 
 .active-link {
-  @apply absolute inset-0 -z-10 gradient-50 rounded-full;
+  @apply absolute inset-0 -z-10 bg-black/5 rounded-full;
 }
