--- a/src/app/view/components/Table/Table.module.css
+++ b/src/app/view/components/Table/Table.module.css
@@ -1,5 +1,4 @@
 .avatar {
-  text-shadow: 1px 1px 1px gray;
-  @apply sticky top-0;
-  @apply w-10 h-10 rounded-full bg-white hidden md:grid place-items-center shadow-md font-bold text-gray-800;
+  @apply w-10 h-10 rounded-full bg-white sticky top-0;
+  @apply hidden md:grid place-items-center shadow-md font-bold text-gray-800;
 }
