--- a/src/components/MarkdownEditor/MarkdownEditor.module.css
+++ b/src/components/MarkdownEditor/MarkdownEditor.module.css
@@ -1,7 +1,16 @@
+.wrapper {
+  @apply fixed inset-0 z-10 grid grid-cols-1 lg:grid-cols-2 gap-4 bg-white;
+
+  /* hide scrollbar */
+  & * ::-webkit-scrollbar {
+    @apply hidden;
+  }
+}
+
 .icon-btn {
   @apply w-10 h-10 bg-black/50 duration-300 text-white rounded-full grid place-content-center;
 }
 
 .icon-btn:hover {
-  @apply md:bg-black/70;
+  @apply lg:bg-black/70;
 }
