feat: add help page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,4 +8,8 @@ body {
   font-family: sans-serif;
 
   @apply flex flex-col items-center justify-center gradient-100;
+
+  & main {
+    @apply w-full flex-1 px-4 md:px-28;
+  }
 }
