--- a/src/components/MarkdownRenderer/styles/markdown.css
+++ b/src/components/MarkdownRenderer/styles/markdown.css
@@ -1,9 +1,17 @@
+.markdown {
+  @apply isolate;
+}
+
 .markdown h1 {
+  @apply text-xl;
+}
+
+.markdown h2 {
   @apply text-lg;
 }
 
 .markdown :is(h1, h2, h3, h4, h5, h6) {
-  @apply font-bold my-4;
+  @apply font-bold my-4 text-gray-800;
 }
 
 .markdown li {
@@ -11,7 +19,7 @@
 }
 
 .markdown p {
-  @apply my-4 text-gray-800;
+  @apply my-4 text-gray-700;
 }
 
 .markdown a {
@@ -31,11 +39,11 @@
 }
 
 .markdown blockquote {
-  @apply my-4 border-l-4 border-l-blue-600 pl-5 py-2 rounded-r-md bg-black/5;
+  @apply my-4 border-l-4 border-l-blue-600 pl-5 py-2 rounded-xl bg-black/5;
 }
 
 .markdown hr {
-  @apply border-b border-b-gray-300 my-4;
+  @apply border-b border-b-blue-300 my-4;
 }
 
 .markdown code:not([class]) {
@@ -43,5 +51,5 @@
 }
 
 .markdown img {
-  @apply rounded-md max-w-2xl w-full my-4;
+  @apply rounded-xl;
 }
