--- a/src/components/MarkdownRenderer/styles/prism-atom-dark.css
+++ b/src/components/MarkdownRenderer/styles/prism-atom-dark.css
@@ -27,9 +27,9 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-  padding: 0.5em 1em;
+  padding: 1em;
   overflow: auto;
-  border-radius: 0.3em;
+  border-radius: 0.75em;
 }
 
 :not(pre) > code[class*="language-"],
