--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-  @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10;
+  @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-10;
 }
 
 .card {
