--- a/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
+++ b/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
@@ -4,7 +4,8 @@
 }
 
 .link {
-  @apply flex flex-row items-center gap-1 py-2 px-4 rounded-full text-sm relative;
+  @apply py-2 px-2 sm:px-4 rounded-full text-sm;
+  @apply flex flex-row items-center gap-1 relative;
 }
 
 .active-link {
