--- a/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
+++ b/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
@@ -5,7 +5,7 @@
 
 .link {
   @apply py-2 px-2 sm:px-4 rounded-full text-sm;
-  @apply flex flex-row items-center gap-1 relative;
+  @apply flex flex-row items-center sm:gap-1 relative;
 }
 
 .active-link {
