feat: migrate archived notes

--- a/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
+++ b/src/components/Navbar/BottomNavbar/BottomNavbar.module.css
@@ -9,5 +9,5 @@
 }
 
 .active-link {
-  @apply absolute inset-0 -z-10 bg-black/5 rounded-full;
+  @apply absolute inset-0 -z-10 rounded-full gradient-100;
 }
