--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -23,7 +23,7 @@
 }
 
 .input {
-  @apply w-full resize-none h-full outline-none bg-white border border-gray-400 p-2 rounded-md;
+  @apply w-full resize-none h-full outline-none bg-white border border-gray-400 py-2 px-3 rounded-md;
 }
 
 .input:focus-within {
@@ -32,14 +32,10 @@
 
 /* fullscreen btn */
 .open-editor-btn {
-  transform: scale(0);
-  @apply text-gray-600;
-  animation: 500ms popup 300ms ease forwards;
-}
+  @apply text-gray-600 scale-0 opacity-0 invisible duration-300 ease-in;
 
-@keyframes popup {
-  to {
-    transform: scale(1);
+  &.active {
+    @apply scale-100 opacity-100 visible;
   }
 }
 
