styles: change some styles

--- a/src/components/MarkdownRenderer/styles/markdown.css
+++ b/src/components/MarkdownRenderer/styles/markdown.css
@@ -11,19 +11,23 @@
 }
 
 .markdown :is(h1, h2, h3, h4, h5, h6) {
-  @apply font-bold my-4 text-gray-800;
+  @apply font-bold mt-4 text-gray-800;
 }
 
 .markdown ul {
-  @apply my-4;
+  @apply mt-4;
 }
 
 .markdown li {
-  @apply my-0.5 list-disc list-inside;
+  @apply my-0.5 list-disc list-inside text-gray-700;
 }
 
 .markdown p {
-  @apply my-4 text-gray-700;
+  @apply mt-4 text-gray-700;
+}
+
+.markdown strong {
+  @apply text-gray-800;
 }
 
 .markdown a {
@@ -31,7 +35,7 @@
 }
 
 .markdown table {
-  @apply text-gray-800 my-4 rounded-xl outline outline-1 outline-gray-400;
+  @apply text-gray-800 mt-4 rounded-xl outline outline-1 outline-gray-400;
 }
 
 .markdown table tbody tr {
@@ -47,15 +51,15 @@
 }
 
 .markdown pre:has(.code-highlight) {
-  @apply my-4;
+  @apply mt-4;
 }
 
 .markdown blockquote {
-  @apply my-4 border-l-4 border-l-blue-600 pl-5 py-2 rounded-xl bg-black/5;
+  @apply mt-4 border-l-4 border-l-blue-600 pl-5 py-2 rounded-xl bg-black/5;
 }
 
 .markdown hr {
-  @apply border-b border-b-gray-400 my-4;
+  @apply border-b border-b-gray-400 mt-4;
 }
 
 .markdown code:not([class]) {
@@ -63,5 +67,5 @@
 }
 
 .markdown img {
-  @apply min-h-10 w-full max-w-6xl rounded-xl mx-auto my-4 border border-gray-300 shadow-sm;
+  @apply min-h-10 w-full max-w-6xl rounded-xl mx-auto mt-4 border border-gray-300 shadow-sm;
 }
