--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,6 @@ body {
   @apply flex flex-col items-center justify-center gradient-100;
 
   & main {
-    @apply w-full flex-1 px-4 md:px-28;
+    @apply w-full flex-1 px-4 lg:px-28;
   }
 }
