--- a/src/components/Navbar/TopNavbar/TopNavbar.module.css
+++ b/src/components/Navbar/TopNavbar/TopNavbar.module.css
@@ -1,3 +1,3 @@
 .nav {
-  @apply w-full px-4 md:px-28 py-2 md:py-3 flex flex-row items-center justify-between isolate shadow-sm;
+  @apply w-full px-4 lg:px-28 py-2 lg:py-3 flex flex-row items-center justify-between isolate shadow-sm;
 }
