--- a/src/app/view/components/Body/Body.module.css
+++ b/src/app/view/components/Body/Body.module.css
@@ -11,5 +11,5 @@
 }
 
 .error {
-  @apply flex-1 flex flex-col items-center justify-center text-gray-600;
+  @apply flex-1 flex flex-col items-center justify-center text-lg;
 }
