--- a/src/app/form/components/style.module.css
+++ b/src/app/form/components/style.module.css
@@ -1,7 +1,7 @@
 /* view link */
 .link {
   @apply flex flex-row items-center gap-1;
-  @apply duration-300 py-2 px-4 rounded-full gradient-100 shadow-md animate-slideFromBottom text-gray-700;
+  @apply duration-300 py-2 px-4 rounded-full gradient-100 shadow-md animate-slideFromBottom text-neutral-700;
 
   &:hover {
     @apply lg:gradient-200;
@@ -24,7 +24,7 @@
 }
 
 .input {
-  @apply w-full resize-none h-full outline-none bg-white border border-gray-400 py-2 px-3 rounded-md;
+  @apply w-full resize-none h-full outline-none bg-white border border-neutral-400 py-2 px-3 rounded-md;
 }
 
 .input:focus-within {
@@ -33,7 +33,7 @@
 
 /* fullscreen btn */
 .open-editor-btn {
-  @apply text-gray-600 scale-0 opacity-0 invisible duration-300 ease-in;
+  @apply text-neutral-600 scale-0 opacity-0 invisible duration-300 ease-in;
 
   &.active {
     @apply scale-100 opacity-100 visible;
@@ -42,7 +42,7 @@
 
 /* submit button */
 .submit-btn {
-  @apply text-gray-800 border border-gray-400 bg-white;
+  @apply text-neutral-800 border border-neutral-400 bg-white;
   @apply w-full flex items-center justify-center h-12 rounded-md font-semibold;
 }
 
