--- a/src/app/view/components/Body/components/Table/Note/Note.module.css
+++ b/src/app/view/components/Body/components/Table/Note/Note.module.css
@@ -3,11 +3,11 @@
 }
 
 .header {
-  @apply flex flex-row w-fit text-gray-500;
+  @apply flex flex-row items-center gap-3 w-fit text-neutral-600;
 }
 
 .copy-btn {
-  @apply ml-4 invisible opacity-0 scale-75 duration-300 delay-200 relative;
+  @apply ml-2 invisible opacity-0 scale-75 duration-300 delay-200 relative;
 
   & svg {
     @apply invisible opacity-0 scale-75;
@@ -25,5 +25,5 @@
 }
 
 .chip {
-  @apply flex flex-row items-center gap-0.5 border-b border-b-gray-300;
+  @apply flex flex-row items-center gap-0.5;
 }
