--- a/src/components/MarkdownRenderer/components/Img/Img.module.css
+++ b/src/components/MarkdownRenderer/components/Img/Img.module.css
@@ -1,8 +1,8 @@
 .wrapper {
-  @apply relative;
+  @apply w-full relative;
 
   & img {
-    @apply w-full my-4 border border-gray-300;
+    @apply cursor-pointer rounded-xl min-h-10 w-fit h-fit max-w-full mx-auto;
   }
 
   & div {
@@ -33,7 +33,6 @@
   }
 
   & img {
-    @apply rounded-xl;
-    @apply opacity-0 scale-50 w-fit h-fit max-h-full max-w-full duration-300;
+    @apply rounded-xl opacity-0 scale-50 w-fit h-fit max-h-full max-w-full duration-300;
   }
 }
