--- a/src/components/MarkdownRenderer/styles/markdown.css
+++ b/src/components/MarkdownRenderer/styles/markdown.css
@@ -14,11 +14,15 @@
   }
 
   ul {
-    @apply mt-4;
+    @apply mt-4 list-disc;
+  }
+
+  ol {
+    @apply mt-4 list-decimal;
   }
 
   li {
-    @apply my-0.5 list-disc list-inside text-neutral-800;
+    @apply my-0.5 list-inside text-neutral-800;
   }
 
   p {
@@ -34,14 +38,14 @@
   }
 
   table {
-    @apply text-neutral-900 mt-4 rounded-xl outline outline-1 outline-neutral-400;
+    @apply text-neutral-900 mt-4 rounded-md outline outline-1 outline-neutral-400;
 
     tbody tr {
-      @apply border-t border-t-neutral-400;
+      @apply border-t border-t-neutral-400 text-neutral-700;
     }
 
     :is(td, th) {
-      @apply px-3 py-2;
+      @apply px-4 py-2;
     }
 
     :is(th, td):not(:last-child) {
@@ -54,11 +58,11 @@
   }
 
   blockquote {
-    @apply mt-4 border-l-4 border-l-blue-600 pl-5 py-2 rounded-xl gradient-200 border border-neutral-300;
+    @apply mt-4 border-l-4 border-l-blue-600 pl-5 py-2 rounded-xl gradient-200;
   }
 
   hr {
-    @apply border-b border-b-neutral-400 mt-4;
+    @apply border-b border-b-black/50 mt-4;
   }
 
   code:not([class]) {
@@ -66,7 +70,7 @@
   }
 
   img {
-    @apply min-h-10 w-full max-w-6xl rounded-xl mx-auto mt-4 border border-neutral-300 shadow-md;
+    @apply mt-4;
   }
 
   .contains-task-list li {
